<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="RecetaEdicion" Id="{39cb612e-7540-4a79-baed-962227bc3cfc}">
    <Declaration><![CDATA[TYPE RecetaEdicion :
STRUCT
	Nombre					:STRING;								//Nome da receita
	SetTmrHomogenizado 		:DINT := 0;								//Tempo de homogeneização
	SetTmrDescarga			:DINT := 0;								//Tempo de descarga
	SetVelocHomogenizado	:REAL := 0;								//Velocidade do homogeneizador na mistura
	SetVelocDescarga		:REAL := 0;								//Velocidade do homogeneizador na descarga
	SetCircuitosLiq			:ARRAY [1..12] OF stReceta_Circuito;	//Configuração dos liquidos
	SetCircuitosPo			:ARRAY [1..4] OF stReceta_Polvo;		//Configuração dos pós
	SetTiempoTotal			:REAL;									//Tempo total da receita
	Aspiracao				:BOOL;									//Receita com aspiração de poeira
END_STRUCT

END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>